# ServerDemo

./: CMakeLists.txt  README.md  cachePolicy.h  cacheTest.cpp  chatRoom.cpp  chatRoom.h  chatclient.c  chatserver.c  config.h  deepseek.cpp  deepseek.h  echoserver.c  http_server.cpp  lfuCache.h  lruCache.h  main.cpp  proxy_server.cpp  testlisten.c  testsendfile.c  webServer.cpp  webServer.h
static/: index.html
static/js/: chat.js
